[build-system]
requires = ["setuptools>=77.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ida-reloader"
authors = [
    { name = "Mahmoud Abdelkader", email = "mahmoud@mahmoudimus.com" },
]
dynamic = ["readme", "version"]
description = "A hot-reload infrastructure for IDA plugins with dependency graph analysis and cycle detection. Automatically tracks module dependencies and reloads in correct order."
keywords = [
    "ida pro",
    "hot reload",
    "reloader",
    "reverse engineering",
    "plugin development",
    "dependency graph",
    "module reload",
    "development tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development",
]
requires-python = ">= 3.10"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = ["coverage", "pytest", "pytest-cov"]
test = ["coverage", "pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/mahmoudimus/ida-reloader"
Documentation = "https://github.com/mahmoudimus/ida-reloader/blob/main/README.md"
Source = "https://github.com/mahmoudimus/ida-reloader"
Issues = "https://github.com/mahmoudimus/ida-reloader/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }
version = { attr = "ida_reloader.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "setup.py",
    ".venv/*",
    "venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
